--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
+	<div>
 	<!-- the entire body must be written by student -->
+	My Current Favorite Song is: <href=https://www.youtube.com/watch?v=lYWHz2cdjzY>
     <script type="text/javascript" src="./script.js">
-</script>
+</script>	
+	</div>
 
 </body>
 
