--- a/main.html
+++ b/main.html
@@ -8,10 +8,9 @@
 
 <body>
 	<div>
-	<!-- the entire body must be written by student -->
-	My Current Favorite Song is: <href=https://www.youtube.com/watch?v=lYWHz2cdjzY>
-    <script type="text/javascript" src="./script.js">
-</script>	
+	
+		My current favourite song is <a href="https://www.youtube.com/watch?v=lYWHz2cdjzY"></a>
+    	
 	</div>
 
 </body>
